<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>examples</name>
  <version>0.0.1</version>
  <description>Examples for chapter 2 in the MRTP book</description>
  <maintainer email="scarpin@ucmerced.edu">Stefano Carpin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensr_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
