<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazeboenvs</name>
  <version>0.0.1</version>
  <description>Package with Gazebo environments</description>
  <maintainer email="scarpin@ucmerced.edu">Stefano Carpin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>clearpath_common</exec_depend>
  <exec_depend>clearpath_generator_gz</exec_depend>
  <exec_depend>clearpath_viz</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros_gz</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
 
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
